# relic

./: CMakeLists.txt  README.md
relic_cpp/: CMakeLists.txt
relic_cpp/bench/: bench_cpp_ibc.cpp
relic_cpp/include/cpp/: relic.h  relic_bn.h  relic_ec.h  relic_hash.h  relic_ibc.h  relic_type.h
relic_cpp/src/: relic_bn.cpp  relic_ec.cpp  relic_hash.cpp  relic_ibc.cpp
relic_cpp/test/: test_cpp_bn.cpp  test_cpp_ibc.cpp  test_cpp_sh_ibs.cpp  test_cpp_vbnn_ibs.cpp
src/fp/: relic_fp_prime.c
